# Pr-cticas_Sistemas_de_Control

./: 1 Práctica PID.ipynb  2 Práctica Algoritmos Genéticos.ipynb  README.md
3 Práctica en ROS/genetic_tune/: package.xml  setup.cfg  setup.py
3 Práctica en ROS/genetic_tune/genetic_tune/: gen_config.yaml  gen_node.py
3 Práctica en ROS/genetic_tune/launch/: gen_tuner.launch.py
